[refactor] OpenCV_Basics/**: Make style of all the section and subsection headings similar

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How a Computer sees an Image"
+    "## **How a Computer sees an Image**"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How OpenCV stores an Image (The Mat Object)"
+    "## **How OpenCV stores an Image (The Mat Object)**"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting Started with Images ([Docs](https://docs.opencv.org/4.x/db/deb/tutorial_display_image.html))"
+    "## **Getting Started with Images ([Docs](https://docs.opencv.org/4.x/db/deb/tutorial_display_image.html))**"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Using matplotlib"
+    "##### *Using matplotlib*"
    ]
   },
   {
