--- a/02_getting_started_with_videos.ipynb
+++ b/02_getting_started_with_videos.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting Started with Videos ([Docs](https://docs.opencv.org/4.7.0/dd/d43/tutorial_py_video_display.html))"
+    "## **Getting Started with Videos ([Docs](https://docs.opencv.org/4.7.0/dd/d43/tutorial_py_video_display.html))**"
    ]
   },
   {
@@ -245,8 +245,8 @@
     "    cap.open()\n",
     "\n",
     "# Define the codec and create VideoWriter object\n",
-    "fourcc = cv.VideoWriter_fourcc(*'XVID')\n",
-    "out = cv.VideoWriter('output.avi', fourcc, 20.0, (640,  480))\n",
+    "fourcc = cv.VideoWriter_fourcc(*\"XVID\")\n",
+    "out = cv.VideoWriter(\"output.avi\", fourcc, 20.0, (640, 480))\n",
     "\n",
     "# read frame by frame\n",
     "while True:\n",
