--- a/03_drawing_on_images.ipynb
+++ b/03_drawing_on_images.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Drawing different shapes on an image (line, rectangle, circle, ellipse, polygons etc.) [[Docs]](https://docs.opencv.org/4.x/dc/da5/tutorial_py_drawing_functions.html)"
+    "## **Drawing different shapes on an image (line, rectangle, circle, ellipse, polygon etc.) [[Docs]](https://docs.opencv.org/4.x/dc/da5/tutorial_py_drawing_functions.html)**"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### First, let's create a grayscale canvas"
+    "##### *First, let's create a grayscale canvas -*"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Putting Text on the image"
+    "## **Putting Text on an image**"
    ]
   },
   {
