--- a/04_arithmatic_operations_on_images.ipynb
+++ b/04_arithmatic_operations_on_images.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Image Addition"
+    "## **Image Addition**"
    ]
   },
   {
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Image Blending"
+    "## **Image Blending**"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bitwise Operations"
+    "## **Bitwise Operations**"
    ]
   },
   {
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Image Masking"
+    "## **Image Masking**"
    ]
   },
   {
