--- a/05_translate_rotate_flip_resize_and_crop.ipynb
+++ b/05_translate_rotate_flip_resize_and_crop.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Image Transformation Operations"
+    "## **Image Transformation Operations**"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Rotating Image without Cropping Sides"
+    "#### *Rotating Image without Cropping Sides*"
    ]
   },
   {
