--- a/07_morphological_transformations.ipynb
+++ b/07_morphological_transformations.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Morphological Transformations ([Docs]())"
+    "## **Morphological Transformations ([Docs](https://docs.opencv.org/4.7.0/d9/d61/tutorial_py_morphological_ops.html))**"
    ]
   },
   {
