--- a/08_thresholding.ipynb
+++ b/08_thresholding.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Thresholding ([Docs](https://docs.opencv.org/4.x/d7/d4d/tutorial_py_thresholding.html))"
+    "## **Thresholding ([Docs](https://docs.opencv.org/4.x/d7/d4d/tutorial_py_thresholding.html))**"
    ]
   },
   {
