--- a/09_canny_edge_detection.ipynb
+++ b/09_canny_edge_detection.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Canny Edge Detection ([Docs](https://docs.opencv.org/3.4/da/d22/tutorial_py_canny.html))"
+    "## **Canny Edge Detection ([Docs](https://docs.opencv.org/3.4/da/d22/tutorial_py_canny.html))**"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Auto Canny ([Source](https://pyimagesearch.com/2015/04/06/zero-parameter-automatic-canny-edge-detection-with-python-and-opencv/))**"
+    "#### *Auto Canny ([Source](https://pyimagesearch.com/2015/04/06/zero-parameter-automatic-canny-edge-detection-with-python-and-opencv/))*"
    ]
   },
   {
