--- a/10_finding_and_drawing_contours.ipynb
+++ b/10_finding_and_drawing_contours.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contours ([Docs]())"
+    "## **Contours ([Docs](https://docs.opencv.org/4.7.0/d4/d73/tutorial_py_contours_begin.html))**"
    ]
   },
   {
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Use `cv.drawContours(image, [contour], -1, color, thickness=-1)` to Draw Filled Contour"
+    "> Use `cv.drawContours(image, [contour], -1, color, thickness=-1)` to Draw Filled Contour."
    ]
   },
   {
