--- a/12_contour_approximation_convex_hull_and_matching_shapes.ipynb
+++ b/12_contour_approximation_convex_hull_and_matching_shapes.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contour Approximation"
+    "## **Contour Approximation ([Docs](https://docs.opencv.org/4.7.0/dd/d49/tutorial_py_contour_features.html))**"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convex Hull"
+    "## **Convex Hull ([Docs](https://docs.opencv.org/4.7.0/dd/d49/tutorial_py_contour_features.html))**"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Match Shapes ([Docs](https://docs.opencv.org/4.x/d9/d8b/tutorial_py_contours_hierarchy.html))"
+    "## **Match Shapes ([Docs](https://docs.opencv.org/4.7.0/d5/d45/tutorial_py_contours_more_functions.html))**"
    ]
   },
   {
