--- a/13_fitting_different_shapes_to_a_contour.ipynb
+++ b/13_fitting_different_shapes_to_a_contour.ipynb
@@ -47,7 +47,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finding and Drawing Contours of Some Simple Shapes "
+    "## **Fitting Different Shapes to a Contour ([Docs](https://docs.opencv.org/4.7.0/dd/d49/tutorial_py_contour_features.html))**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Finding and Drawing Contours of Some Simple Shapes*"
    ]
   },
   {
@@ -161,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bounding Rectangles"
+    "- ### Bounding Rectangles"
    ]
   },
   {
@@ -169,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Straight Bounding Rectangle"
+    "#### *Straight Bounding Rectangle*"
    ]
   },
   {
@@ -234,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Rotated Bounding Rectangle"
+    "#### *Rotated Bounding Rectangle*"
    ]
   },
   {
@@ -303,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Minimum Enclosing Circle"
+    "- ### Minimum Enclosing Circle"
    ]
   },
   {
@@ -359,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fitting an Ellipse"
+    "- ### Fitting an Ellipse"
    ]
   },
   {
@@ -435,7 +443,7 @@
     }
    ],
    "source": [
-    "x , y, MA, ma, angle"
+    "x, y, MA, ma, angle"
    ]
   },
   {
