--- a/14_contour_properties.ipynb
+++ b/14_contour_properties.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finding and drawing contours (from an image)"
+    "### *Finding and drawing contours (from an image)*"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Some Important Contour Properties ([Docs](https://docs.opencv.org/4.7.0/d1/d32/tutorial_py_contour_properties.html))"
+    "## **Some Important Contour Properties ([Docs](https://docs.opencv.org/4.7.0/d1/d32/tutorial_py_contour_properties.html))**"
    ]
   },
   {
@@ -429,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aspect Ratio"
+    "- ### Aspect Ratio"
    ]
   },
   {
@@ -437,11 +437,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Aspect ratio is the ratio of width to height of the bounding rectangle of an object.\n",
+    "1. Aspect ratio is the ratio of width to height of the bounding rectangle of an object.\n",
     "\n",
     "<img src=\"./imgs/aspect_ratio.png\">\n",
     "\n",
-    "- Aspect ratio is invariant to translation."
+    "2. Aspect ratio is invariant to translation."
    ]
   },
   {
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extent"
+    "- ### Extent"
    ]
   },
   {
@@ -493,11 +493,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Extent of a contour is the ratio of contour area to its bounding rectangle area.\n",
+    "1. Extent of a contour is the ratio of contour area to its bounding rectangle area.\n",
     "\n",
     "<img src=\"./imgs/extent.png\">\n",
     "\n",
-    "- Extent is invariant to both translation and scaling."
+    "2. Extent is invariant to both translation and scaling."
    ]
   },
   {
@@ -569,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Equivalent Diameter"
+    "- ### Equivalent Diameter"
    ]
   },
   {
@@ -577,11 +577,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Equivalent Diameter is the diameter of the circle whose area is the same as the contour area. \n",
+    "1. Equivalent Diameter is the diameter of the circle whose area is the same as the contour area. \n",
     "\n",
     "<img src=\"./imgs/equivalent_dia.png\">\n",
     "\n",
-    "- Equivalent Diameter is invariant to both translation and rotation."
+    "2. Equivalent Diameter is invariant to both translation and rotation."
    ]
   },
   {
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Orientation"
+    "- ### Orientation"
    ]
   },
   {
@@ -662,9 +662,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Orientation is the angle at which an object is directed.\n",
-    "- `(x, y), (MA, ma), angle = cv.fitEllipse(cnt)` gives the angle of the contour by fitting an ellipse.\n",
-    "- `(x, y), (w, h), angle = cv.minAreaRect(cnt)` gives the angle of the contour by fitting a rotated rectangular box."
+    "1. Orientation is the angle at which an object is directed.\n",
+    "2. `(x, y), (MA, ma), angle = cv.fitEllipse(cnt)` gives the angle of the contour by fitting an ellipse.\n",
+    "3. `(x, y), (w, h), angle = cv.minAreaRect(cnt)` gives the angle of the contour by fitting a rotated rectangular box."
    ]
   },
   {
@@ -672,7 +672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hu Moments"
+    "- ### Hu Moments"
    ]
   },
   {
