--- a/15_hierarchy_of_contours.ipynb
+++ b/15_hierarchy_of_contours.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Contour Hierarchy"
+    "## **Contour Hierarchy**"
    ]
   },
   {
@@ -17,7 +17,7 @@
     }
    },
    "source": [
-    "### Read the [Documentation](https://docs.opencv.org/4.7.0/d9/d8b/tutorial_py_contours_hierarchy.html)."
+    "### *Read the [Documentation](https://docs.opencv.org/4.7.0/d9/d8b/tutorial_py_contours_hierarchy.html).*"
    ]
   },
   {
