--- a/16_perspective_transformation.ipynb
+++ b/16_perspective_transformation.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perspective Transformation of an Image"
+    "## **Perspective Transformation of an Image ([Docs](https://docs.opencv.org/3.4/da/d6e/tutorial_py_geometric_transformations.html))**"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, we will do this by utilizing the concepts learned in the Contour section"
+    "### *Now, we will do this by utilizing the concepts learned in the Contour section.*"
    ]
   },
   {
