--- a/17_histograms_find_plot_analyze.ipynb
+++ b/17_histograms_find_plot_analyze.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Image Histograms ([Wikipedia](https://en.wikipedia.org/wiki/Image_histogram))"
+    "## **Image Histograms ([Wikipedia](https://en.wikipedia.org/wiki/Image_histogram))**"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finding and Plotting Image Histograms ([Docs](https://docs.opencv.org/4.7.0/d1/db7/tutorial_py_histogram_begins.html))"
+    "- ### Finding and Plotting Image Histograms ([Docs](https://docs.opencv.org/4.7.0/d1/db7/tutorial_py_histogram_begins.html))"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Plotting histogram for \"img_gray_cherry_blossom\" image directly without calculating the histogram with cv.calcHist()"
+    "`->` Plotting histogram for \"img_gray_cherry_blossom\" image directly without calculating the histogram with cv.calcHist()"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Finding and plotting histogram for the \"img_color_cherry_blossom\" image (color mode: BGR)"
+    "`->` Finding and plotting histogram for the \"img_color_cherry_blossom\" image (color mode: BGR)"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Finding and plotting histogram for a specific region of the \"img_gray_cherry_blossom\" image"
+    "`->` Finding and plotting histogram for a specific region of the \"img_gray_cherry_blossom\" image"
    ]
   },
   {
