--- a/18_histogram_equalization.ipynb
+++ b/18_histogram_equalization.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Histogram Equalization ([Wikipedia]())"
+    "## **Histogram Equalization ([Wikipedia](https://en.wikipedia.org/wiki/Histogram_equalization))**"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Global Histogram Equalization ([Docs](https://docs.opencv.org/4.7.0/d5/daf/tutorial_py_histogram_equalization.html))"
+    "- ### Global Histogram Equalization ([Docs](https://docs.opencv.org/4.7.0/d5/daf/tutorial_py_histogram_equalization.html))"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Histogram Equalization of Grayscale Images"
+    "`->` Histogram Equalization of Grayscale Images"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Histogram Equalization of Color Images ([Stackoverflow Post](https://stackoverflow.com/questions/15007304/histogram-equalization-not-working-on-color-image-opencv))"
+    "`->` Histogram Equalization of Color Images ([Stackoverflow Post](https://stackoverflow.com/questions/15007304/histogram-equalization-not-working-on-color-image-opencv))"
    ]
   },
   {
@@ -212,9 +212,7 @@
     "Equalization involves Intensity values of the image and not the color components. So for a simple RGB color image, Histogram Equalization should not be applied individually on each channel. Rather, it should be applied such that intensity values are equalized without disturbing the color balance of the image. \n",
     "\n",
     "1. The first step is to convert the color space of the image from **BGR into** one of the color spaces which separate intensity values from color components. Some of these are: **HSV/HLS, YUV, YCrCb**. **YCrCb is preferred** as it is designed for digital images. \n",
-    "\n",
     "2. Perform Histogram Equalization of the **intensity plane Y**. \n",
-    "\n",
     "3. Lastly, convert the image **back to RGB**."
    ]
   },
@@ -346,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CLAHE (Contrast Limited Adaptive Histogram Equalization) "
+    "- ### CLAHE (Contrast Limited Adaptive Histogram Equalization) "
    ]
   },
   {
@@ -354,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Why Adaptive Histogram Equalization?"
+    "#### *Why Adaptive Histogram Equalization?*"
    ]
   },
   {
@@ -432,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### How Contrast Limited Adaptive Histogram Equalization (CLAHE) Works?"
+    "#### *How Contrast Limited Adaptive Histogram Equalization (CLAHE) Works?*"
    ]
   },
   {
