--- a/19_template_matching.ipynb
+++ b/19_template_matching.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Template Matching ([Docs](https://docs.opencv.org/4.7.0/d4/dc6/tutorial_py_template_matching.html))"
+    "## **Template Matching ([Docs](https://docs.opencv.org/4.7.0/d4/dc6/tutorial_py_template_matching.html))**"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ##### In the following example we will try to detect 'mario' from a screenshot of the super mario game"
+    "> ##### In the following example we will try to detect 'mario' from a screenshot of the super mario game"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ##### In the following example we will try to detect 'coins' from a screenshot of the super mario game"
+    "> ##### In the following example we will try to detect 'coins' from a screenshot of the super mario game"
    ]
   },
   {
