--- a/20_hough_transform.ipynb
+++ b/20_hough_transform.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Hough transform to detect lines ([Docs](https://docs.opencv.org/4.7.0/d6/d10/tutorial_py_houghlines.html))**"
+    "- ### Hough transform for detecting lines ([Docs](https://docs.opencv.org/4.7.0/d6/d10/tutorial_py_houghlines.html))"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Probabilistic Hough Lines"
+    "#### *Probabilistic Hough Lines*"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Hough transform to detect circles ([Docs](https://docs.opencv.org/4.7.0/da/d53/tutorial_py_houghcircles.html))** "
+    "- ### Hough transform for detecting circles ([Docs](https://docs.opencv.org/4.7.0/da/d53/tutorial_py_houghcircles.html))"
    ]
   },
   {
