--- a/06_noise_in_images.ipynb
+++ b/06_noise_in_images.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding Artificial Noise to an Image"
+    "## **Adding Artificial Noise to an Image**"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Filtering ([Docs](https://docs.opencv.org/4.x/d4/d13/tutorial_py_filtering.html))"
+    "## **Image Filtering ([Docs](https://docs.opencv.org/4.x/d4/d13/tutorial_py_filtering.html))**"
    ]
   },
   {
@@ -221,13 +221,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### What frequency means in case of images"
+    "#### *What frequency means in case of images*"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -235,13 +237,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### High Pass and Low Pass Filters"
+    "#### *High Pass and Low Pass Filters*"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -261,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Convolution ([Wikipedia](https://en.wikipedia.org/wiki/Convolution))"
+    "#### *Convolution ([Wikipedia](https://en.wikipedia.org/wiki/Convolution))*"
    ]
   },
   {
@@ -301,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Kernel"
+    "#### *Kernel*"
    ]
   },
   {
@@ -321,10 +325,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### The `cv.filter2D()` function"
+    "#### *The `cv.filter2D()` function*"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Image Smoothing ([Wikipedia](https://en.wikipedia.org/wiki/Smoothing))"
+    "- ### Image Smoothing ([Wikipedia](https://en.wikipedia.org/wiki/Smoothing))"
    ]
   },
   {
@@ -535,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Detect Blur in Images"
+    "#### *Detect Blur in Images*"
    ]
   },
   {
@@ -609,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Non-Local Means Image Denoising ([Docs](https://docs.opencv.org/3.4/d5/d69/tutorial_py_non_local_means.html))"
+    "- ### Non-Local Means Image Denoising ([Docs](https://docs.opencv.org/3.4/d5/d69/tutorial_py_non_local_means.html))"
    ]
   },
   {
@@ -741,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sharpening Images"
+    "- ### Sharpening Images"
    ]
   },
   {
