[perf] OpenCV_Basics/11_contour_features.ipynb: Improved the code for filtering out contours with zero area

--- a/11_contour_features.ipynb
+++ b/11_contour_features.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        " 'nu03': 0.0}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,74 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 16, 17, 18, 19, 21]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# As we can see, there's clearly some contours with m00=0 i.e, area=0. Let's filter them out.\n",
-    "contours_with_zero_area = [\n",
-    "    i\n",
-    "    for i in range(len(moment_of_all_contours))\n",
-    "    if moment_of_all_contours[i].get(\"m00\") == 0\n",
-    "]\n",
-    "contours_with_zero_area"
+    "moment_of_contours_with_gt_zero_area = [\n",
+    "    val for key, val in moment_of_all_contours.items() if val.get(\"m00\") != 0\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's remove these items from shape_img_contours"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**`Note:`** See this article @https://www.geeksforgeeks.org/python-remove-elements-at-indices-in-list/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we will use tuple comprehension to create a new list of contours that has area > 0.\n",
-    "# This way the original one won't be changed.\n",
-    "contours_gt_zero_area = tuple(\n",
-    "    elem\n",
-    "    for i, elem in enumerate(shape_img_contours)\n",
-    "    if i not in contours_with_zero_area\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shape_img_contours = contours_gt_zero_area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,18 +164,18 @@
        "10"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(shape_img_contours)"
+    "len(moment_of_contours_with_gt_zero_area)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,15 +207,14 @@
        " 'nu03': -0.6459927724980649}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# now let's see the change\n",
-    "shape_contours_moments = [cv.moments(cnt) for cnt in shape_img_contours]\n",
-    "moment_of_valid_contour_0 = shape_contours_moments[0]\n",
+    "moment_of_valid_contour_0 = moment_of_contours_with_gt_zero_area[0]\n",
     "moment_of_valid_contour_0"
    ]
   },
@@ -287,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Out of all the values, the function `cv.moments(cnt)` returns, three keys can be used to calculate the centroid of a contour as, \n",
+    "Out of all the key, value pairs that the function `cv.moments(cnt)` returns, three keys can be used to calculate the centroid of a contour as, \n",
     "\n",
     "**(`cx= 'm10'/'m00'`, `cy= 'm01'/'m00'`)**. \n",
     "\n",
@@ -299,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -334,16 +278,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_of_contour_0 = cv.contourArea(shape_img_contours[0])"
+    "# contours with greater than 0 area\n",
+    "contours_with_gt_zero_area = [\n",
+    "    shape_img_contours[key]\n",
+    "    for key, val in moment_of_all_contours.items()\n",
+    "    if val.get(\"m00\") != 0\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(contours_with_gt_zero_area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area_of_contour_0 = cv.contourArea(contours_with_gt_zero_area[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +330,7 @@
        "9.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,17 +368,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_3_cnts_by_area = sorted(shape_img_contours, key=cv.contourArea, reverse=True)[:3]\n",
+    "top_3_cnts_by_area = sorted(\n",
+    "    contours_with_gt_zero_area, key=cv.contourArea, reverse=True\n",
+    ")[:3]\n",
     "top_3_cnts_area = [cv.contourArea(cnt) for cnt in top_3_cnts_by_area]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +389,7 @@
        "[95120.5, 82151.5, 75175.5]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,16 +400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f62b8603f10>"
+       "<matplotlib.image.AxesImage at 0x7f591c9a18d0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -483,13 +463,13 @@
        "39.071067690849304"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv.arcLength(shape_img_contours[0], True)"
+    "cv.arcLength(contours_with_gt_zero_area[0], True)"
    ]
   },
   {
