[refactor] OpenCV_Basics/12_contour_approximation_convex_hull_and_matching_shapes.ipynb, OpenCV_Basics/14_contour_properties.ipynb

--- a/14_contour_properties.ipynb
+++ b/14_contour_properties.ipynb
@@ -417,9 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyzing the detected contour for its properties, enables us to build applications capable of detecting and identifying objects in an image.\n",
-    "\n",
-    "There are some contour properties which are invariant to different transformations such as rotation, translation, and scaling. \n",
+    "Analyzing the detected contour for its properties, enables us to build applications capable of detecting and identifying objects in an image. There are some contour properties which are invariant to different transformations such as rotation, translation, and scaling. \n",
     "\n",
     "Also, there are seven unique image moments called **Hu-moments** which are really helpful for object detection using contours since they are invariant to translation, scaling, rotation, and reflection all at once."
    ]
@@ -703,11 +701,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hu-Moments are seven moments invariant to translation, rotation and scale. Seventh one is skew-invariant. Those values can be found using `cv.HuMoments()` function."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> HuMoments are calculated by the function, `cv.HuMoments()`"
+    "> HuMoments are calculated by the function, `cv.HuMoments(M)`"
    ]
   },
   {
@@ -825,6 +830,13 @@
     "    \"The 7 HuMoments after Translation, Scaling and Rotation is applied to the image in the Log10 scale are: \\n\",\n",
     "    np.log10(np.abs(hu_moments_tsr_cnt)),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`Decision: `** The HuMoments before and after applying the image transformation operations are very close."
    ]
   },
   {
