--- a/16_perspective_transformation.ipynb
+++ b/16_perspective_transformation.ipynb
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Our goal** is to obtain a perspective transform of the \"bulb_img\" where we will determine the corner points of the image using some of the concepts learned in the Contour section (such as, finding contours, contour approximation etc.) instead of just eyeballing the corner points. Also, we would like to keep the aspect ratio of the page when we show the transformed output."
+    "**Our goal** is to obtain a perspective transform of the \"bulb_img\" where we will determine the corner points of the drawing sheet using some of the concepts learned in the Contour section (such as, finding contours, contour approximation etc.) instead of just eyeballing the corner points. Also, we would like to keep the aspect ratio of the drawing when we show the transformed output."
    ]
   },
   {
@@ -218,7 +218,7 @@
    "source": [
     "# first we convert the original image to grayscale\n",
     "bulb_img_gray = cv.cvtColor(bulb_img, cv.COLOR_BGR2GRAY)\n",
-    "# threshold the grayscale image (we take lower threshold value a bit hight so that only the page is mostly highlighted)\n",
+    "# threshold the grayscale image (we take lower threshold value a bit higher so that only the page is mostly highlighted)\n",
     "_, bulb_img_gray_thresholded = cv.threshold(bulb_img_gray, 150, 255, cv.THRESH_BINARY)"
    ]
   },
@@ -271,7 +271,7 @@
    "outputs": [],
    "source": [
     "cnt = cnt[0]\n",
-    "# see how much points is stored for identifying the detected contour: len(cnt)"
+    "# len(cnt) == 2945 i.e, 2945 points are stored for identifying the detected contour"
    ]
   },
   {
@@ -347,7 +347,7 @@
     }
    ],
    "source": [
-    "# the points are in clockwise order i.e, top left, bottom left, bottom right, top right\n",
+    "# the points are in counter clockwise order i.e, top left, bottom left, bottom right, top right\n",
     "corners = np.squeeze(approx, axis=1).astype(np.float32)\n",
     "print(corners)"
    ]
@@ -358,8 +358,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to have the points in counterclock wise order i.e, top right, bottom right, bottom left, top left\n",
-    "# cv.convexHull(approx, clockwise=False, returnPoints=True)"
+    "# to have the points in clockwise order i.e, top right, bottom right, bottom left, top left\n",
+    "# cv.convexHull(approx)"
    ]
   },
   {
