--- a/17_histograms_find_plot_analyze.ipynb
+++ b/17_histograms_find_plot_analyze.ipynb
@@ -56,13 +56,11 @@
     "\n",
     "It plots the number of pixels for each tonal value. The horizontal axis of the graph represents the tonal variations, while the vertical axis represents the total number of pixels in that particular tone. The left side of the horizontal axis represents the dark areas, the middle represents mid-tone values and the right hand side represents light areas. The vertical axis represents the size of the area (total number of pixels) that is captured in each one of these zones. \n",
     "\n",
-    "Thus, the histogram for a very dark image will have most of its data points on the left side and center of the graph. \n",
-    "\n",
-    "Conversely, the histogram for a very bright image with few dark areas and/or shadows will have most of its data points on the right side and center of the graph. \n",
+    "Thus, the histogram for a very dark image will have most of its data points on the left side and center of the graph. Conversely, the histogram for a very bright image with few dark areas and/or shadows will have most of its data points on the right side and center of the graph. \n",
     "\n",
     "By looking at the histogram for a specific image a viewer will be able to judge the entire tonal distribution at a glance. \n",
     "\n",
-    "In the field of computer vision, image histograms can be useful tools for thresholding. Because the information contained in the graph is a representation of pixel distribution as a function of tonal variation, image histograms can be analyzed for peaks and/or valleys. This threshold value can then be used for edge detection, image segmentation, and co-occurrence matrices. "
+    "In the field of computer vision, **image histograms can be useful tools for thresholding.** Because the information contained in the graph is a representation of pixel distribution as a function of tonal variation, image histograms can be analyzed for peaks and/or valleys. **This threshold value can then be used for edge detection, image segmentation, and co-occurrence matrices.**"
    ]
   },
   {
@@ -70,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### Finding and Plotting Image Histograms ([Docs](https://docs.opencv.org/4.7.0/d1/db7/tutorial_py_histogram_begins.html))"
+    "`Resource: Finding and Plotting Image Histograms` ([Docs](https://docs.opencv.org/4.7.0/d1/db7/tutorial_py_histogram_begins.html))"
    ]
   },
   {
@@ -128,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`->` Plotting histogram for \"img_gray_cherry_blossom\" image directly without calculating the histogram with cv.calcHist()"
+    "#### *Plotting histogram directly with plt.hist()* "
    ]
   },
   {
@@ -158,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`->` Finding and plotting histogram for the \"img_color_cherry_blossom\" image (color mode: BGR)"
+    "#### *Finding and Plotting Histogram of Color Images*"
    ]
   },
   {
@@ -197,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Analysis:` The sudden rise of red pixels in the high intensity region is due to the pink cherry blossoms in the image."
+    "`Analysis:` The sudden rise of red pixels in the high intensity region is due to the high density of the pink cherry blossoms in the image."
    ]
   },
   {
@@ -205,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`->` Finding and plotting histogram for a specific region of the \"img_gray_cherry_blossom\" image"
+    "#### *Using Mask for finding histogram of a certain region of an Image*"
    ]
   },
   {
