how numpy represents color images (height, width, color_channels)

--- a/01_getting_started_with_images.ipynb
+++ b/01_getting_started_with_images.ipynb
@@ -78,6 +78,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`Important Note:`** In **`Numpy`** the color information is stored in the columns i.e, along the x axis of the array (z, y, x). So in numpy the shape of an image would be represented as, **`(height, width, 3)`**."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
